added start page body styling and added questions in script.js

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>National Parks Quiz</title>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
@@ -34,7 +33,7 @@
   </main>
 
 
-  <script src="script.js"></script>
+  <script src="./assets/script.js"></script>
 </body>
 
 </html>
