added quiz questions and answers in js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <a></a>
   <!-- Need a section for the timer text -->
   <section></section>
-  <main>
+  <main id="container">
     <!-- Starting section -->
     <section id="start">
       <h1>National Parks Quiz</h1>
