added timer function to js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Need a link to highscores -->
   <a></a>
   <!-- Need a section for the timer text -->
-  <section></section>
+  <section id="timer"></section>
   <main id="container">
     <!-- Starting section -->
     <section id="start">
