added styling for start section and initial creation of function to cycle between questions in js

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- Starting section -->
     <section id="start">
       <h1>National Parks Quiz</h1>
+      <img src="./assets/meina-yin-eprFKRjtoE0-unsplash.jpg">
       <p>Welcome! Try and answer the following five question related to our US National Parks. This will be a timed
         quiz. You will start with 60 seconds. Any incorrect answer will penalize you by 10 seconds. Please play as many
         times as you would like and try to beat your high score! Have fun learning about our National Parks!</p>
