added header section in html and associated css styling and started start game logic in js

--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
   <link rel="stylesheet" href="./assets/style.css">
 </head>
 
+<header id="header">
+  <a href="#">High Scores</a>
+  <section id="timer">Timer :</section>
+</header>
+
 <body>
-  <!-- Need a link to highscores -->
-  <a></a>
-  <!-- Need a section for the timer text -->
-  <section id="timer"></section>
+
   <main id="container">
     <!-- Starting section -->
-    <section id="start">
-      <h1>National Parks Quiz</h1>
+    <section id="start-section">
+      <h2>National Parks Quiz</h2>
       <img src="./assets/meina-yin-eprFKRjtoE0-unsplash.jpg">
       <p>Welcome! Try and answer the following five question related to our US National Parks. This will be a timed
         quiz. You will start with 60 seconds. Any incorrect answer will penalize you by 10 seconds. Please play as many
