added endQuiz function and modified question styling

--- a/index.html
+++ b/index.html
@@ -21,18 +21,19 @@
     <section id="start-section">
       <h2>National Parks Quiz</h2>
       <img src="./assets/meina-yin-eprFKRjtoE0-unsplash.jpg">
-      <p>Welcome! Try and answer the following five question related to our US National Parks. This is a timed
+      <article>Welcome! Try and answer the following five question related to our US National Parks. This is a timed
         quiz. You will start with 75 seconds. Any incorrect answer will penalize you by 10 seconds. Please play as many
-        times as you would like and try to beat your high score! Have fun learning about our National Parks!</p>
+        times as you would like and try to beat your high score! Have fun learning about our National Parks!
+      </article>
       <!-- start button -->
       <button id="start-button">Start Quiz</button>
     </section>
     <section id="quiz-section" class="hide">
       <h3 id="question-text"></h3>
       <ol id="choices">
-        <li class="answers" id="answer-0" data-correct="false"></li>
-        <li class="answers" id="answer-1" data-correct="false"></li>
-        <li class="answers" id="answer-2" data-correct="false"></li>
+        <li class="answers" id="answer-0" data-correct="false"></li><br>
+        <li class="answers" id="answer-1" data-correct="false"></li><br>
+        <li class="answers" id="answer-2" data-correct="false"></li><br>
         <li class="answers" id="answer-3" data-correct="false"></li>
       </ol>
 
@@ -47,7 +48,7 @@
     </section>
 
     <section id="high-scores" class="hide">
-      
+
     </section>
 
   </main>
